modified the module1 PET notebook to reflect romains comments

--- a/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
+++ b/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
@@ -2585,7 +2585,7 @@
     "id": "LD2fXm3OKD3r"
    },
    "source": [
-    "Write the middle slice df to a csv file: "
+    "Write the middle slice df to a csv file to make sure that it's saved: "
    ]
   },
   {
@@ -2647,7 +2647,7 @@
     "id": "hSTQHDB7KPEb"
    },
    "source": [
-    "We already created the middle_slice_df with some relevant information; let's add in additional clinical information. Add in some of the clinical characteristics/outcomes that we had in the original patient dataframe to the middle slice df: "
+    "We already created the `middle_slice_df` with some relevant information; let's add in additional clinical information. Add in some of the clinical characteristics/outcomes to be able to relate the clinical outcomes (e.g. \"Group\" (our outcome)) to the slices themselves so we know what to predict: "
    ]
   },
   {
@@ -2920,8 +2920,8 @@
     }
    ],
    "source": [
-    "middle_slice_df['PTID'] = [x.split('/')[7] for x in middle_slice_df.path_middle_slices]\n",
-    "middle_slice_df.PTID.value_counts()"
+    "middle_slice_df['Subject'] = [x.split('/')[7] for x in middle_slice_df.path_middle_slices]\n",
+    "middle_slice_df.Subject.value_counts().head()"
    ]
   },
   {
@@ -2958,7 +2958,7 @@
     }
    ],
    "source": [
-    "middle_slice_df.PTID.duplicated().value_counts()"
+    "middle_slice_df.Subject.duplicated().value_counts()"
    ]
   },
   {
@@ -2982,7 +2982,7 @@
    },
    "outputs": [],
    "source": [
-    "middle_slice_df = middle_slice_df.loc[~middle_slice_df.PTID.duplicated()].reset_index(drop = True) "
+    "middle_slice_df = middle_slice_df.loc[~middle_slice_df.Subject.duplicated()].reset_index(drop = True) "
    ]
   },
   {
@@ -3008,7 +3008,6 @@
     }
    ],
    "source": [
-    "\n",
     "middle_slice_df.shape"
    ]
   },
@@ -3067,7 +3066,7 @@
    },
    "outputs": [],
    "source": [
-    "consolidated_data_df = middle_slice_df.merge(data_df, left_on=['PTID'], right_on = 'Subject', how = 'left')"
+    "consolidated_data_df = middle_slice_df.merge(data_df, on = 'Subject', how = 'left')"
    ]
   },
   {
@@ -3272,7 +3271,7 @@
     "id": "zWwbD2j8dakt"
    },
    "source": [
-    "Our outcome will be the diagnosis which is indicated by the DX column. Let's see what the counts of diagnosis are: "
+    "Our outcome will be the diagnosis which is indicated by the \"Group\" column. Let's see what the counts of diagnosis are: "
    ]
   },
   {
@@ -3305,59 +3304,6 @@
    ],
    "source": [
     "consolidated_data_df.Group.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "id": "ah85R3QmnN3c",
-    "outputId": "2f0432e5-91c4-4958-f604-27f9e971d890"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/content/drive/MyDrive/Data_Shortcut/csvs/ADNI_PET_MiddleSlices_ClinicalData.csv')"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "Path(DATA_PATH.parent, 'csvs', 'ADNI_PET_MiddleSlices_ClinicalData.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "id": "X9GNV6a0naPq",
-    "outputId": "3b7c6e92-ef7e-4815-8113-5ad7e6fe815e"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Module2_BraTS', 'Module1_ADNI', 'csvs', 'Notebooks']"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir('/content/drive/MyDrive/Data_Shortcut/')"
    ]
   },
   {
@@ -3408,22 +3354,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "collapsed": true,
-    "id": "iEjBYPk9kyw0"
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# [print(x) for x in consolidated_data_df['path_middle_slices']];"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "QTQ_haOxpnI6"
@@ -3465,7 +3395,7 @@
     "    img = dicom_ds.pixel_array\n",
     "    plt.imshow(img, cmap= 'gray')\n",
     "    plt.axis('off')\n",
-    "    plt.title(row['PTID']+' '+row['Group'])\n",
+    "    plt.title(row['Subject']+' '+row['Group'])\n",
     "plt.show()\n"
    ]
   },
@@ -3502,7 +3432,7 @@
     "    img = dicom_ds.pixel_array\n",
     "    plt.imshow(img, cmap= 'gray')\n",
     "    plt.axis('off')\n",
-    "    plt.title(row['PTID']+' '+row['Group'])\n",
+    "    plt.title(row['Subject']+' '+row['Group'])\n",
     "plt.show()\n"
    ]
   },
@@ -3513,45 +3443,6 @@
    },
    "source": [
     "I see a general \"hotter\" trend in the AD patients. The next step will be to let the algorithm decide which \"hot\" features are useful for predicting AD from CN patients. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "hUxJ13dEmPSy"
-   },
-   "source": [
-    "# Next steps\n",
-    "Break into groups and \n",
-    "1. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "collapsed": true,
-    "id": "iIjs4bEuqh9x"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "collapsed": true,
-    "id": "GLjLf_cKCAkt"
-   },
-   "outputs": [],
-   "source": [
-    "\n"
    ]
   }
  ],
