changed the code and clinical data CSV file positions

--- a/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
+++ b/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
@@ -34,8 +34,9 @@
     "    \n",
     "The notebook is organized as follows: \n",
     "1. Mounting and accessing the data \n",
-    "2. Visualizing the data \n",
-    "3. Creating your dataset "
+    "2. Understanding the clinical data & how it relates to the imaging data in the folder\n",
+    "3. Visualizing the imaging data \n",
+    "4. Creating your dataset (paired imaging + clinical data) "
    ]
   },
   {
@@ -84,6 +85,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "executionInfo": {
      "elapsed": 4,
      "status": "ok",
@@ -224,6 +226,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Understanding the clinical data & how it relates to the imaging data in the folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "4PA74wE95i82"
    },
@@ -341,7 +350,7 @@
    },
    "outputs": [],
    "source": [
-    "data_df = pd.read_csv(Path(DATA_PATH,'CSVS/ADNI2_3_base_screen_AV45_10_08_2021.csv'))"
+    "clinical_data_df = pd.read_csv(Path(DATA_PATH,'CSVS/ADNI_ClinicalData.csv'))"
    ]
   },
   {
@@ -378,7 +387,7 @@
     }
    ],
    "source": [
-    "data_df.shape"
+    "clinical_data_df.shape"
    ]
   },
   {
@@ -615,7 +624,39 @@
     }
    ],
    "source": [
-    "data_df.head()"
+    "clinical_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "missing_clinical_data_df = pd.read_csv(Path(DATA_PATH,'CSVS/ADNI_MissingClinicalData.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'clinical_data_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/local/30276683/ipykernel_10504/2653542994.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclinical_data_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclinical_data_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmissing_clinical_data_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'clinical_data_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "clinical_data_df = clinical_data_df.append(missing_clinical_data_df)"
    ]
   },
   {
@@ -629,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -650,20 +691,23 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Counter({'no': 221, 'yes': 890})"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'clinical_data_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/local/30276683/ipykernel_10504/2567950333.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpt_in_csv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpt_in_clinical_data_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclinical_data_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSubject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mpatient_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m'PET'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mpatient_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpt_in_clinical_data_df\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'clinical_data_df' is not defined"
+     ]
     }
    ],
    "source": [
     "pt_in_csv = []\n",
+    "pt_in_clinical_data_df = clinical_data_df.Subject.tolist()\n",
+    "\n",
     "for patient_id in os.listdir(DATA_PATH/'PET'): \n",
-    "    if patient_id in data_df.Subject.tolist():\n",
+    "    if patient_id in pt_in_clinical_data_df:\n",
     "        pt_in_csv.append(\"yes\")\n",
     "    else: \n",
     "        pt_in_csv.append('no')\n",
@@ -719,7 +763,7 @@
     "id": "ar-F4l8oitt3"
    },
    "source": [
-    "## 2. Investigating the types of imaging data"
+    "# 3. Investigating the types of imaging data"
    ]
   },
   {
@@ -874,7 +918,7 @@
     }
    ],
    "source": [
-    "Counter([x.split('/')[-1] for x in glob.glob(str(Path(DATA_PATH, 'PET', '*', '*')))]).most_common()"
+    "Counter([x.split('/')[-1] for x in glob.glob(str(Path(DATA_PATH, 'PET', '*', '*')))]).most_common(10)"
    ]
   },
   {
@@ -934,7 +978,7 @@
     "id": "hVUIMSoSC6Nn"
    },
    "source": [
-    "Let's use one of these patietns and compare:  "
+    "Let's use one of these patients and compare:  "
    ]
   },
   {
@@ -982,8 +1026,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'm going to just pick one of these image types in the patient folder and look at the file structure to evaluate how deep in the directory the image is actually located: "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "executionInfo": {
@@ -1005,8 +1056,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Below, we are using `glob` to get files in a particular directory; specifically this patient and this image type \n",
+    "* We can't use `os.listdir` as it doesn't support the use of asterisks/wild cards \n",
+    "* `glob` doesn't support using Paths, so we have to convert it to a string \n",
+    "* `Path` (with a capital P like this) is a python object imported from pathlib that allows for automatic path creation.\n",
+    "* Check out the Path object below"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1028,29 +1090,27 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
-      "text/plain": [
-       "'/content/drive/MyDrive/Data_Shortcut/Module1_ADNI/PET/127_S_5200/AV45_Coreg,_Avg,_Std_Img_and_Vox_Siz,_Uniform_Resolution/2013-07-30_14_10_30.0/I384158/ADNI_127_S_5200_PT_AV45_Coreg,_Avg,_Std_Img_and_Vox_Siz,_Uniform_Resolution_Br_20130802090608950_17_S197013_I384158.dcm'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'Path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/local/30276683/ipykernel_10504/3289644011.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## Check out the object here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'PET'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpatient_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimage_type_to_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m## You'll notice that it's not a regular string. So that's why we have to convert it to string before using glob.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Path' is not defined"
+     ]
     }
    ],
    "source": [
-    "## Looking at the files, picking one of the descriptions above and looking at the file structure: \n",
-    "\n",
-    "## Below, we are using glob to get files in a particular directory; specifically this patient that we are looking at \n",
-    "## We can't use os.listdir as it doesn't support the use of asterisks/wild cards \n",
-    "## glob doesn't support using Paths, so we have to convert it to a string \n",
-    "## Path (with a capital P like this) is a python object imported from pathlib that allows for automatic path creation. \n",
-    "## Check out the object here: \n",
     "Path(DATA_PATH,'PET',patient_name,image_type_to_test, '*', '*', '*')\n",
-    "## You'll notice that it's not a regular string. So that's why we have to convert it to string before using glob. "
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You'll notice that it's not a regular string. So that's why we have to convert it to string before using glob. "
    ]
   },
   {
@@ -2793,7 +2853,7 @@
     }
    ],
    "source": [
-    "data_df.head()"
+    "clinical_data_df.head()"
    ]
   },
   {
@@ -3036,7 +3096,7 @@
     }
    ],
    "source": [
-    "data_df.Subject.duplicated().value_counts()"
+    "clinical_data_df.Subject.duplicated().value_counts()"
    ]
   },
   {
@@ -3051,7 +3111,7 @@
    },
    "outputs": [],
    "source": [
-    "data_df = data_df.loc[~data_df.Subject.duplicated()]"
+    "clinical_data_df = clinical_data_df.loc[~clinical_data_df.Subject.duplicated()]"
    ]
   },
   {
@@ -3066,7 +3126,7 @@
    },
    "outputs": [],
    "source": [
-    "consolidated_data_df = middle_slice_df.merge(data_df, on = 'Subject', how = 'left')"
+    "consolidated_clinical_data_df = middle_slice_df.merge(clinical_data_df, on = 'Subject', how = 'left')"
    ]
   },
   {
@@ -3092,7 +3152,7 @@
     }
    ],
    "source": [
-    "consolidated_data_df.shape"
+    "consolidated_clinical_data_df.shape"
    ]
   },
   {
@@ -3262,7 +3322,7 @@
     }
    ],
    "source": [
-    "consolidated_data_df.head()"
+    "consolidated_clinical_data_df.head()"
    ]
   },
   {
@@ -3303,7 +3363,7 @@
     }
    ],
    "source": [
-    "consolidated_data_df.Group.value_counts()"
+    "consolidated_clinical_data_df.Group.value_counts()"
    ]
   },
   {
@@ -3318,7 +3378,7 @@
    },
    "outputs": [],
    "source": [
-    "consolidated_data_df.to_csv(Path('/content/drive/MyDrive/Data_Shortcut/Module1_ADNI/CSVS', 'ADNI_PET_MiddleSlices_ClinicalData.csv'))"
+    "consolidated_clinical_data_df.to_csv(Path('/content/drive/MyDrive/Data_Shortcut/Module1_ADNI/CSVS', 'ADNI_PET_MiddleSlices_ClinicalData.csv'))"
    ]
   },
   {
@@ -3350,7 +3410,7 @@
     }
    ],
    "source": [
-    "consolidated_data_df.Group.value_counts()"
+    "consolidated_clinical_data_df.Group.value_counts()"
    ]
   },
   {
@@ -3388,7 +3448,7 @@
     "num_patients_visualize = 10\n",
     "num_rows = math.ceil(num_patients_visualize/5)\n",
     "plt.figure(figsize = (20, 15*num_rows))\n",
-    "CN_df = consolidated_data_df.loc[consolidated_data_df.Group == 'CN'].copy().reset_index(drop = True)\n",
+    "CN_df = consolidated_clinical_data_df.loc[consolidated_clinical_data_df.Group == 'CN'].copy().reset_index(drop = True)\n",
     "for i, row in CN_df[:num_patients_visualize].iterrows(): # iterates through the dictionary, while the enumerate function keeps track of the index with i\n",
     "    plt.subplot(5*num_rows,5,i+1)    # the number of images in the grid \n",
     "    dicom_ds = pydicom.dcmread(row['path_middle_slices'])\n",
@@ -3425,7 +3485,7 @@
     "num_patients_visualize = 10\n",
     "num_rows = math.ceil(num_patients_visualize/5)\n",
     "plt.figure(figsize = (20, 15*num_rows))\n",
-    "AD_df = consolidated_data_df.loc[consolidated_data_df.Group == 'AD'].copy().reset_index(drop = True)\n",
+    "AD_df = consolidated_clinical_data_df.loc[consolidated_clinical_data_df.Group == 'AD'].copy().reset_index(drop = True)\n",
     "for i, row in AD_df[:num_patients_visualize].iterrows(): # iterates through the dictionary, while the enumerate function keeps track of the index with i\n",
     "    plt.subplot(5*num_rows,5,i+1)    # the number of images in the grid \n",
     "    dicom_ds = pydicom.dcmread(row['path_middle_slices'])\n",
