changed a few things around and made it more cohesive

--- a/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
+++ b/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
@@ -35,7 +35,7 @@
     "The notebook is organized as follows: \n",
     "1. Mounting and accessing the data \n",
     "2. Understanding the clinical data & how it relates to the imaging data in the folder\n",
-    "3. Visualizing the imaging data \n",
+    "3. Investigating the imaging data\n",
     "4. Creating your dataset (paired imaging + clinical data) "
    ]
   },
@@ -763,7 +763,14 @@
     "id": "ar-F4l8oitt3"
    },
    "source": [
-    "# 3. Investigating the types of imaging data"
+    "# 3. Investigating the imaging data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 Understanding what imaging data is available, in what format, and how to access it "
    ]
   },
   {
@@ -927,7 +934,7 @@
     "id": "w3wUmknzBYwZ"
    },
    "source": [
-    "Looks like there are two main types: Some that have the word \"dynamic\" and some that have the word \"averaged\". What else do you notice about the differences among the different PET image types? (1 point) \n",
+    "Looks like there are two main types: Some that have the word \"dynamic\" and some that have the word \"averaged\". What else do you notice about the differences among the different PET image types?\n",
     "________________________________________________________________________________________________________________________________________________________________\n",
     "Below, we are going to search for patients with lots of variety of PET data "
    ]
@@ -1315,6 +1322,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2 Reading in the imaging data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
@@ -1354,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "executionInfo": {
@@ -1395,8 +1409,15 @@
    },
    "outputs": [],
    "source": [
-    "## Using the _30_ tag as a potential indicator that it's the slice at the center of the volume\n",
+    "## Using the _45_ tag as a potential indicator that it's the slice at the center of the volume\n",
     "first_dicom_dataset = pydicom.dcmread(glob.glob(str(Path(DATA_PATH,'PET',patient_name,image_type_to_test, date_test, image_series_test, '*_45_*')))[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2.1 Exploring the metadata"
    ]
   },
   {
@@ -1425,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1575,7 +1596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Visualizing the data"
+    "### 3.2.2 Visualizing the imaging data "
    ]
   },
   {
@@ -1589,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1608,22 +1629,9 @@
     "id": "T2kUvnjksrC0",
     "outputId": "a491fd39-39e0-4d79-f055-44e51ead7105"
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'first_dicom_dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/local/27317577/ipykernel_7522/2268702717.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## In this box, print the shape of the pixel data:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfirst_dicom_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpixel_array\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m## It should be (160, 160)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'first_dicom_dataset' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## In this box, print the shape of the pixel data: \n",
-    "first_dicom_dataset.pixel_array.shape\n",
     "\n",
     "## It should be (160, 160)"
    ]
@@ -1902,7 +1910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Creating your PET dataset"
+    "# 4. Creating your PET dataset"
    ]
   },
   {
@@ -1931,14 +1939,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Create a list of all the uniform images we think we have: "
+    "## 4.1 Create a list of all the uniform images we think we have: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
     "executionInfo": {
      "elapsed": 132110,
      "status": "ok",
@@ -1952,7 +1959,19 @@
     },
     "id": "_hmmUrNWlLJx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/local/30276683/ipykernel_10504/3385792650.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0muniform_path_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATA_PATH\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'PET'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*niform*'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'*'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'glob' is not defined"
+     ]
+    }
+   ],
    "source": [
     "uniform_path_list = glob.glob(str(Path(DATA_PATH,'PET', '*', '*niform*', '*', '*')))"
    ]
@@ -2021,7 +2040,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Here, we want to go through the path list of uniform voxels and find the middle \"center\" slice of the volume and record the path to it:"
+    "## 4.2 Here, we want to go through the path list of uniform voxels and find the middle \"center\" slice of the volume and record the path to it:"
    ]
   },
   {
@@ -2229,7 +2248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 Explore the naming; are there averaged and dynamic images in here? "
+    "## 4.3 Explore the naming; are there averaged and dynamic images in here? "
    ]
   },
   {
@@ -2698,7 +2717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.5 Create a CSV file that has all the relevant information about the PET data that we need so that we can use it to guide reading in images for modeling"
+    "## 4.5 Create a CSV file that has all the relevant information about the PET data that we need so that we can use it to guide reading in images for modeling"
    ]
   },
   {
@@ -3460,6 +3479,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here I'm looking at a few random AD patients: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -3504,6 +3530,15 @@
    "source": [
     "I see a general \"hotter\" trend in the AD patients. The next step will be to let the algorithm decide which \"hot\" features are useful for predicting AD from CN patients. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
