fixed up some of the problems in Module1, should all be working now and good to go!

--- a/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
+++ b/Module1/Module1_NB1_ADNI_PET_DataWrangling.ipynb
@@ -1303,6 +1303,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below might take a  long time. \n",
+    "* Why? \n",
+    "* Why might we not write \"Uniform\" but instead use a wild card (asterisk) here? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1377,7 +1386,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Here, we want to go through the path list of uniform voxels and find the middle \"center\" slice of the volume and record the path to it:"
+    "## 4.2 Find the middle slice of these uniform images\n",
+    "Here, we want to go through the path list of uniform voxels and find the middle \"center\" slice of the volume and record the path to it:"
    ]
   },
   {
@@ -1404,13 +1414,20 @@
    "outputs": [],
    "source": [
     "middle_slices = []\n",
-    "for path_to_uniform in tqdm(uniform_path_list): # Using the tqdm package to show a status bar based on how quickly the process is running\n",
+    "for path_to_uniform in tqdm(uniform_path_list): \n",
     "    num_slices = len(os.listdir(path_to_uniform))\n",
     "    middle_slice = str(num_slices//2)\n",
     "    if len(glob.glob(path_to_uniform+'/*_'+middle_slice+\"_*\")) > 0: \n",
     "        middle_slices.append(glob.glob(path_to_uniform+'/*_'+middle_slice+\"_*\"))\n",
     "    else: pass\n",
     "    # print(path_to_uniform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can someone explain to me what this code is doing line by line? "
    ]
   },
   {
@@ -1473,7 +1490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 Explore how many slices each of these volumes has to see if there are any major differences between the PET acquistions (even those that have been processed to form uniform voxels)"
+    "## 4.3 Explore how many slices each of these volumes has to see if there are any major differences between the PET acquistions (even those that have been processed to form uniform voxels)"
    ]
   },
   {
@@ -1507,7 +1524,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.3 Explore the naming; are there averaged and dynamic images in here? "
+    "## 4.4 Explore the naming; are there averaged and dynamic images in here? "
    ]
   },
   {
@@ -1776,8 +1793,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "background_save": true
@@ -1785,9 +1801,8 @@
     "id": "O9ypePoBKWEa",
     "outputId": "1545252b-eace-43bc-994c-643092e99097"
    },
-   "outputs": [],
    "source": [
-    "clinical_data_df.head()"
+    "### 4.5.1 Editing the `middle_slice_df` "
    ]
   },
   {
@@ -1876,12 +1891,20 @@
     "colab": {
      "background_save": true
     },
+    "collapsed": true,
     "id": "R0Om8Djee1kZ",
     "outputId": "913f44cb-10d6-4901-8ecb-f09905df5565"
    },
    "outputs": [],
    "source": [
     "middle_slice_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5.2 Editing the `clinical_data_df`"
    ]
   },
   {
@@ -1912,6 +1935,13 @@
    "outputs": [],
    "source": [
     "clinical_data_df = clinical_data_df.loc[~clinical_data_df.Subject.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5.3 Consolidating the clinical data and the imaging data: "
    ]
   },
   {
@@ -1977,36 +2007,6 @@
     },
     "id": "jp30MHjYdXX6",
     "outputId": "67c310d2-5cbf-4684-cfed-6fd0335b3cc2"
-   },
-   "outputs": [],
-   "source": [
-    "consolidated_clinical_data_df.Group.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "collapsed": true,
-    "id": "RlSoS4J3djSc"
-   },
-   "outputs": [],
-   "source": [
-    "consolidated_clinical_data_df.to_csv(Path('/content/drive/MyDrive/Data_Shortcut/Module1_ADNI/CSVS', 'ADNI_PET_MiddleSlices_ClinicalData.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "background_save": true
-    },
-    "id": "M1eUuOE5NbL3",
-    "outputId": "6c45bbf2-336d-4052-b5d7-42db54ee2355"
    },
    "outputs": [],
    "source": [
@@ -2088,6 +2088,44 @@
    },
    "source": [
     "I see a general \"hotter\" trend in the AD patients. The next step will be to let the algorithm decide which \"hot\" features are useful for predicting AD from CN patients. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5.4 Writing out the CSV file containing both our clinical data and the paths to our imaging data\n",
+    "This CSV file will be the basis for our deep learning algorithm! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "background_save": true
+    },
+    "collapsed": true,
+    "id": "RlSoS4J3djSc"
+   },
+   "outputs": [],
+   "source": [
+    "consolidated_clinical_data_df.to_csv(Path('/content/drive/MyDrive/Data_Shortcut/Module1_ADNI/CSVS', 'ADNI_PET_MiddleSlices_ClinicalData.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "background_save": true
+    },
+    "id": "M1eUuOE5NbL3",
+    "outputId": "6c45bbf2-336d-4052-b5d7-42db54ee2355"
+   },
+   "outputs": [],
+   "source": [
+    "consolidated_clinical_data_df.Group.value_counts()"
    ]
   },
   {
