--- a/Archive/Module0_CNN_PET_MRI.ipynb
+++ b/Archive/Module0_CNN_PET_MRI.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 106,
       "metadata": {
         "id": "uI6EXdxMtatL"
       },
@@ -43,7 +43,9 @@
         "from PIL import Image\n",
         "import glob as gb\n",
         "import pandas as pd\n",
-        "import os"
+        "import os\n",
+        "from tqdm import tqdm\n",
+        "from sklearn.metrics import roc_auc_score"
       ]
     },
     {
@@ -1311,59 +1313,181 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "conv_layers = nn.Sequential(\n",
-        "            nn.Conv2d(3, 32, kernel_size=3, stride=1, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-        "            nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
-        "            nn.Conv2d(64, 64, kernel_size=3, stride=1, padding=1),\n",
-        "            nn.ReLU(),\n",
-        "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
-        "        )"
-      ],
+      "execution_count": 105,
       "metadata": {
-        "id": "RBdjfMGDxJX1"
+        "id": "SPSQLKs7tp-b"
       },
-      "execution_count": 94,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "def train_model(model, train_loader, val_loader, num_epochs=5, learning_rate=0.001):\n",
+        "    # Define loss criterion and optimizer\n",
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+        "\n",
+        "    # Create a list to store metrics\n",
+        "    metrics = {'epoch': [], 'loss': [], 'accuracy': [], 'val_auc': []}\n",
+        "\n",
+        "    # Training loop\n",
+        "    for epoch in range(num_epochs):\n",
+        "        model.train()\n",
+        "        running_loss = 0.0\n",
+        "        correct_predictions = 0\n",
+        "        total_predictions = 0\n",
+        "\n",
+        "        # Training Phase\n",
+        "        for images, labels in tqdm(train_loader, desc=f'Epoch {epoch+1}/{num_epochs}', leave=False):\n",
+        "            optimizer.zero_grad()\n",
+        "            outputs = model(images)\n",
+        "            loss = criterion(outputs, labels)\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "            running_loss += loss.item()\n",
+        "\n",
+        "            # Calculate accuracy\n",
+        "            _, predicted = torch.max(outputs, 1)\n",
+        "            correct_predictions += (predicted == labels).sum().item()\n",
+        "            total_predictions += labels.size(0)\n",
+        "\n",
+        "        # Calculate epoch metrics\n",
+        "        epoch_loss = running_loss / len(train_loader)\n",
+        "        epoch_accuracy = correct_predictions / total_predictions\n",
+        "        metrics['epoch'].append(epoch + 1)\n",
+        "        metrics['loss'].append(epoch_loss)\n",
+        "        metrics['accuracy'].append(epoch_accuracy)\n",
+        "\n",
+        "        # Validation Phase\n",
+        "        model.eval()\n",
+        "        all_labels = []\n",
+        "        all_probs = []\n",
+        "        with torch.no_grad():\n",
+        "            for images, labels in val_loader:\n",
+        "                outputs = model(images)\n",
+        "                probs = nn.functional.softmax(outputs, dim=1)[:, 1]  # Probability of class 1\n",
+        "                all_labels.extend(labels.cpu().numpy())\n",
+        "                all_probs.extend(probs.cpu().numpy())\n",
+        "\n",
+        "        # Calculate AUC\n",
+        "        val_auc = roc_auc_score(all_labels, all_probs)\n",
+        "        metrics['val_auc'].append(val_auc)\n",
+        "\n",
+        "        print(f'Epoch {epoch+1}/{num_epochs}, Loss: {epoch_loss:.4f}, Accuracy: {epoch_accuracy:.4f}, Val AUC: {val_auc:.4f}')\n",
+        "\n",
+        "    # Convert metrics to a DataFrame\n",
+        "    metrics_df = pd.DataFrame(metrics)\n",
+        "    return metrics_df"
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "out = conv_layers(image_batch)"
+        "\n",
+        "metrics_df = train_model(model, train_loader)"
       ],
       "metadata": {
-        "id": "DYzp98GKxLAp"
-      },
-      "execution_count": 95,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "out.shape"
-      ],
-      "metadata": {
-        "id": "tGdCxBDRxcdI",
-        "outputId": "5433394d-1440-4be4-f2d0-923bb77bcb09",
+        "id": "oM4X-3tX1iQg",
+        "outputId": "4e43951a-3d83-4724-d525-6f8cd0189407",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 96,
+      "execution_count": 104,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([32, 64, 16, 16])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 96
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/5, Loss: 0.3535\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 2/5, Loss: 0.3405\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 3/5, Loss: 0.3357\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": []
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 4/5, Loss: 0.3291\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "                                                          "
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 5/5, Loss: 0.3267\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(metrics_df)"
+      ],
+      "metadata": {
+        "id": "a_XAgvtz1lBr",
+        "outputId": "d1238179-454d-4530-fa46-0d7ef51c821b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   epoch      loss\n",
+            "0      1  0.353489\n",
+            "1      2  0.340525\n",
+            "2      3  0.335664\n",
+            "3      4  0.329127\n",
+            "4      5  0.326686\n"
+          ]
         }
       ]
     },
@@ -1371,73 +1495,10 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "E5RR1qkhyq5i",
-        "outputId": "8a1cf8fa-0fe0-44c9-ad91-3131c97ba669",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 144
-        }
+        "id": "z21yO4w_5FAU"
       },
-      "execution_count": 98,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'DataLoader' object has no attribute 'shape'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-98-845fa6b79289>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: 'DataLoader' object has no attribute 'shape'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 97,
-      "metadata": {
-        "id": "SPSQLKs7tp-b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 365
-        },
-        "outputId": "2f2fdee6-381a-489b-92c4-ebe368fcc3ad"
-      },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-97-2e8248561b0b>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mrunning_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    579\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    580\u001b[0m             )\n\u001b[0;32m--> 581\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    582\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    583\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    345\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m     _engine_run_backward(\n\u001b[0m\u001b[1;32m    348\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/autograd/graph.py\u001b[0m in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    823\u001b[0m         \u001b[0munregister_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_register_logging_hooks_on_whole_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_outputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    824\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 825\u001b[0;31m         return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    826\u001b[0m             \u001b[0mt_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    827\u001b[0m         )  # Calls into the C++ engine to run the backward pass\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
-      "source": [
-        "criterion = nn.CrossEntropyLoss()\n",
-        "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-        "\n",
-        "num_epochs = 5\n",
-        "for epoch in range(num_epochs):\n",
-        "    model.train()\n",
-        "    running_loss = 0.0\n",
-        "    for images, labels in train_loader:\n",
-        "        optimizer.zero_grad()\n",
-        "        outputs = model(images)\n",
-        "        loss = criterion(outputs, labels)\n",
-        "        loss.backward()\n",
-        "        optimizer.step()\n",
-        "        running_loss += loss.item()\n",
-        "\n",
-        "    print(f'Epoch {epoch+1}/{num_epochs}, Loss: {running_loss/len(train_loader)}')"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
