--- a/Archive/Module0_CNN_PET_MRI.ipynb
+++ b/Archive/Module0_CNN_PET_MRI.ipynb
@@ -1129,7 +1129,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 514
+          "height": 409
         },
         "id": "4_aSisnwenkS",
         "outputId": "f69fb26a-4f95-4135-c3e3-7da72cc4aee0"
@@ -1313,13 +1313,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 112,
       "metadata": {
         "id": "SPSQLKs7tp-b"
       },
       "outputs": [],
       "source": [
-        "def train_model(model, train_loader, val_loader, num_epochs=5, learning_rate=0.001):\n",
+        "def train_model(model, train_loader, val_loader, num_epochs=5, learning_rate=0.001, use_gpu=False):\n",
+        "    # Check if CUDA is available and use GPU if specified\n",
+        "    device = torch.device('cuda' if use_gpu and torch.cuda.is_available() else 'cpu')\n",
+        "    model.to(device)\n",
+        "\n",
         "    # Define loss criterion and optimizer\n",
         "    criterion = nn.CrossEntropyLoss()\n",
         "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -1336,6 +1340,8 @@
         "\n",
         "        # Training Phase\n",
         "        for images, labels in tqdm(train_loader, desc=f'Epoch {epoch+1}/{num_epochs}', leave=False):\n",
+        "            images, labels = images.to(device), labels.to(device)\n",
+        "\n",
         "            optimizer.zero_grad()\n",
         "            outputs = model(images)\n",
         "            loss = criterion(outputs, labels)\n",
@@ -1361,6 +1367,7 @@
         "        all_probs = []\n",
         "        with torch.no_grad():\n",
         "            for images, labels in val_loader:\n",
+        "                images, labels = images.to(device), labels.to(device)\n",
         "                outputs = model(images)\n",
         "                probs = nn.functional.softmax(outputs, dim=1)[:, 1]  # Probability of class 1\n",
         "                all_labels.extend(labels.cpu().numpy())\n",
@@ -1381,99 +1388,35 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "metrics_df = train_model(model, train_loader)"
+        "metrics_df = train_model(model, train_loader, val_loader, num_epochs = 1, use_gpu = True)"
       ],
       "metadata": {
-        "id": "oM4X-3tX1iQg",
-        "outputId": "4e43951a-3d83-4724-d525-6f8cd0189407",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oM4X-3tX1iQg",
+        "outputId": "d83487c7-ee41-4cbf-b4bf-002e3f7a65d6"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": []
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/5, Loss: 0.3535\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": []
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 2/5, Loss: 0.3405\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": []
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 3/5, Loss: 0.3357\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": []
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 4/5, Loss: 0.3291\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "                                                          "
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 5/5, Loss: 0.3267\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r"
-          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print(metrics_df)"
+        "metrics_df"
       ],
       "metadata": {
-        "id": "a_XAgvtz1lBr",
-        "outputId": "d1238179-454d-4530-fa46-0d7ef51c821b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a_XAgvtz1lBr",
+        "outputId": "d1238179-454d-4530-fa46-0d7ef51c821b"
       },
       "execution_count": 107,
       "outputs": [
@@ -1490,15 +1433,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "z21yO4w_5FAU"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
